--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,87 @@
+/* 
+==================
+fonts used
+==================
+*/
 @import url("https://fonts.googleapis.com/css?family=Catamaran:400,700|Grand+Hotel");
+/* 
+==================
+global variable used
+==================
+*/
+:root{
+    --clr-primary:rgb(9, 9, 75);
+    --clr-primarylight:rgb(66, 66, 100);
+    --clr-gray-1:rgb(13, 104, 121);
+    --clr-gray-5:#617d98;
+    --clr-gray-10:#f1f5f8;
+    --clr-white:#fff;
+    --ff-primary:"Catamaran",sans-serif;
+    --ff-secondary:"Grand Hotel",cursive;
+    --transition:all 0.3s linear;
+    --radius:0.5rem;
+    --spacing:0.25rem;
+}
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+body{
+    background: var(--clr-white);
+    font-family: var(--ff-primary);
+    color: var(--clr-gray-1);
+    line-height: 1.5;
+    font-size:0.875rem;
+    
+}
+a{
+text-decoration: none;
+}
+
+img{
+    display: block;
+    width:100%;
+    
+}
+h1,h2,h3,h4{
+    letter-spacing: var(--spacing);
+    text-transform: capitalize;
+    line-height: 1.25;
+    margin-bottom: 0.75rem;
+}
+h1{
+    font-size: 3rem;
+}
+h2{
+    font-size: 2rem;
+}
+h3{
+    font-size: 1.5rem;
+}
+h4{
+    font-size: 0.875rem;
+}
+p{
+    margin-bottom: 1.25rem;
+}
+@media screen and (min-width:800px){
+    h1{
+        font-size: 4rem;
+    }
+    h2{
+        font-size: 2.5rem;
+    }
+    h3{
+        font-size: 2rem;
+    }
+    h4{
+        font-size: 1rem;
+    }
+    body{
+        font-size: 1rem;
+    }
+    h1,h2,h3,h4{
+        line-height: 1;
+    }
+}
