--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ global variable used
 ==================
 */
 :root{
-    --clr-primary:rgb(9, 9, 75);
+    --clr-primary:rgb(87, 63, 110);
     --clr-primarylight:rgb(66, 66, 100);
     --clr-gray-1:rgb(13, 104, 121);
     --clr-gray-5:#617d98;
@@ -84,4 +84,62 @@ p{
     h1,h2,h3,h4{
         line-height: 1;
     }
+}
+
+/* more global css */
+.btn{
+    text-transform: uppercase;
+    background:var(--clr-primary);
+    color: var(--clr-white);
+    padding: 0.75rem 1rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    font-weight: 700;
+    transition: var(--transition);
+    font-size: 1rem;
+    border:none;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+}
+.btn:hover{
+    color: var(--ff-primary);
+    background:var(--clr-primarylight);
+}
+/* 
+==================
+header
+==================
+*/
+.header{
+    min-height: 100vh;
+    position: relative;
+    /* animation: ; */
+    overflow-x: hidden;
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url("https://images.pexels.com/photos/112460/pexels-photo-112460.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") center/cover no-repeat fixed;
+}
+.banner{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.banner h2{
+    font-family: var(--ff-secondary);
+    color: var(--ff-primary);
+    /* animation */
+}
+.banner h1{
+    text-transform: uppercase;
+    color: var(--clr-white);
+    margin-top: 1.25rem;
+    margin-bottom: 2rem;
+    /* animation */
+
+}
+.banner-btn{
+    outline:0.125rem solid var(--ff-primary);
+    outline-offset: 0.25rem ;
+    font-size: 1.25rem;
+    padding: 1rem 1.75rem;
 }
