--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,25 @@ p{
     clear: both;
     display: table;
 }
+.section-title h3{
+    font-family: var(--ff-secondary);
+    color: var(--clr-primary);
+}
+.section-title{
+    margin-bottom: 2rem;
+}
+.section-center{
+    padding: 4rem 0;
+    width: 85vw;
+    margin: 0 auto;
+    max-width: 1170px;
+}
+@media screen and (min-width:992px){
+    .section-center{
+        padding: 4rem 1rem;
+        width: 95vw;
+    }
+}
 /* 
 ==================
 header
@@ -196,4 +215,12 @@ header
     .skill{
         width:25%;
     }
+}
+/* 
+==================
+About section
+==================
+*/
+.about-img,.about-info{
+    padding: 2rem 0;
 }
