--- a/css/styles.css
+++ b/css/styles.css
@@ -92,12 +92,12 @@ p{
     text-transform: uppercase;
     background:var(--clr-primary);
     color: var(--clr-white);
-    padding: 0.75rem 1rem;
+    padding: 0.375rem 0.75rem;
     letter-spacing: var(--spacing);
     display: inline-block;
     font-weight: 700;
     transition: var(--transition);
-    font-size: 1rem;
+    font-size: 0.875rem;
     border:none;
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0,0,0,0.2);
@@ -185,7 +185,7 @@ header
     font-size: 2.5rem;
     margin-bottom: 1.25rem;
     /* transition: var(--transition); */
-    color: yellowgreen;
+    color: var(--clr-gray-1);
     display: inline-block;
 }
 .skill-text{
@@ -223,4 +223,32 @@ About section
 */
 .about-img,.about-info{
     padding: 2rem 0;
+}
+.about-picture-container{
+    background-color: var(--clr-primary);
+    border: 0.5rem solid var(--clr-primary);
+    max-width: 30rem;
+    /* prevents image from scaling out of the container */
+    overflow: hidden;
+}
+.about-picture{
+    transition: var(--transition);
+}
+.about-picture-container:hover, .about-picture{
+    opacity: 0.5;
+    transform: scale(1.2);
+
+}
+.about-text{
+    max-width: 26rem;
+    color: var(--clr-maing-ray);
+}
+@media screen and (min-width:992px){
+    .about-info,.about-img{
+        float: left;
+        width: 50%;
+    }
+    .about-info{
+        padding: 2rem;
+    }
 }
