--- a/css/styles.css
+++ b/css/styles.css
@@ -252,3 +252,53 @@ About section
         padding: 2rem;
     }
 }
+/* 
+==================
+section interior
+==================
+*/
+.products{
+    background-color: var(--clr-gray-5);
+}
+.products article{
+    padding: 2rem 0;
+}
+.product-text{
+    color: var(--clr-maing-ray);
+    max-width: 26rem;
+}
+.product{
+    margin-top: 2rem;
+}
+.product-img{
+    border-radius: var(--radius);
+    height: 17rem;
+    object-fit: cover;
+    margin-bottom: 2rem ;
+}
+.product-price{
+    color: var(--clr-primary);
+}
+@media screen and (min-width:760px){
+    .product{
+     float: left;
+     width:50%;
+     padding-right: 2rem;
+    }
+}
+@media screen and (min-width:992px){
+    .product{
+     width:33.3%;
+   
+    }
+}
+@media screen and (min-width:1100px){
+    .products-info{
+     float: left;
+     width:30%;
+    }
+    .product-inventory{
+        float: left;
+        width:70%;
+       }
+}
