--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ p{
     margin: 0 auto;
     max-width: 1170px;
 }
-@media screen and (min-width:992px){
+@media screen and (min-width:800px){
     .section-center{
         padding: 4rem 1rem;
         width: 95vw;
@@ -229,7 +229,7 @@ About section
     border: 0.5rem solid var(--clr-primary);
     max-width: 30rem;
     /* prevents image from scaling out of the container */
-    overflow: hidden;
+  overflow: hidden;
 }
 .about-picture{
     transition: var(--transition);
@@ -301,4 +301,76 @@ section interior
         float: left;
         width:70%;
        }
+}
+/* 
+==================
+services
+==================
+*/
+.services-title{
+    margin-top: 4rem;
+    margin-bottom: -4rem;
+    text-align: center;
+}
+.service-card{
+    margin: 2rem 0;
+    background-color: #c2cfdb;
+    border-radius: var(--radius);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: var(--transition);
+}
+.service-card:hover{
+    transform:scale(1.02);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+}
+.service-img{
+    height: 17rem;
+    object-fit: cover;
+    border-top-left-radius:var(--radius);
+    border-top-right-radius:var(--radius);
+}
+.service-info{
+    text-align: center;
+    padding: 3rem 1rem 2.5rem 1rem;
+}
+.service-info p{
+    max-width:20rem ;
+    color: var(--clr-maing-ray);
+    margin: 0 auto;
+}
+.service-btn{
+    font-size: 0.75rem;
+    text-transform: capitalize;
+    padding: 0.375rem 0.5rem;
+    border-radius: var(--radius);
+    font-weight: 400;
+    margin-top: 1.25rem;
+}
+@media screen and (min-width:768px){
+    .service-card{
+        float: left;
+        width: 45%;
+        margin-right: 5%;
+    }
+}
+@media screen and (min-width:900px){
+    .service-card{
+        width: 30%;
+        margin-right: 3.33%;
+    }
+}
+.service-img-container{
+    position: relative;
+}
+.service-icon{
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    font-size: 2rem;
+    background: var(--clr-gray-5);
+    padding: 0.25rem 0.6rem;
+    border-radius: 50%;
+    transform: translate(-50%,50%);
+    border:0.375rem solid var(--clr-white);
+
 }
