--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ global variable used
     --clr-gray-1:rgb(13, 104, 121);
     --clr-gray-5:#c2cfdb;
     --clr-maing-ray:gray;
+    --clr-light-gray:rgb(189, 183, 183);
     --clr-gray-10:#f8fafc;
     --clr-white:#fff;
     --ff-primary:"Catamaran",sans-serif;
@@ -374,3 +375,71 @@ services
     border:0.375rem solid var(--clr-white);
 
 }
+/* 
+==================
+contact
+==================
+*/
+.contact{
+    background:var(--clr-gray-10);
+}
+.contact-form ,.contact-info{
+    margin: 1rem 0;
+}
+.contact-item{
+    margin-bottom: 1.75rem;
+}
+.contact-title{
+    color: var(--clr-primary);
+    font-weight: 400;
+}
+.contact-text{
+   text-transform: uppercase;
+}
+.contact-form{
+    background: var(--clr-white);
+    border-radius: var(--radius);
+    text-align: center;
+    box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
+    max-width: 35rem;
+}
+.contact-form:hover{
+    box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
+}
+.contact-form h3{
+    padding-top:1.25rem ;
+    color: var(--clr-gray-5);
+}
+.form-group{
+    padding: 1rem 1.5rem;
+}
+.form-control{
+    display: block;
+    width: 100%;
+    padding: 0.75rem 1rem;
+    border:none;
+    margin-bottom: 1.25rem;
+    background: var(--clr-gray-10);
+    border-radius: var(--radius);
+    text-transform: uppercase;
+    letter-spacing: var(--spacing);
+
+}
+.submit-btn{
+    display: block;
+    width: 100%;
+    padding: 1rem;
+    border-bottom-left-radius: var(--radius);
+    border-bottom-right-radius: var(--radius);
+}
+@media screen and (min-width:800px){
+    .contact-form,.contact-info{
+        float: left;
+        width: 50%;
+    }
+}
+/* 
+==================
+services
+==================
+*/
