--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,71 @@ p{
 }
 /* 
 ==================
+navbar
+==================
+*/
+.nav-btn{
+    position:fixed;
+    top: 5%;
+    left: 5%;
+    font-size: 2.5rem;
+    color: var(--clr-white);
+    z-index: 1;
+    cursor: pointer;
+}
+/* navbar */
+.navbar{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: var(--clr-gray-10);
+    z-index: 2;
+    box-shadow: 2px 0 2px rgba(0,0,0,0.2);
+/* hide nav */
+}
+.showNav{
+
+}
+.nav-header{
+    text-align: right;
+    padding-right: 1rem;
+}
+.nav-close{
+  cursor: pointer;
+  font-size: 2.5rem;
+  transition: var(--transition);
+  color: rgb(240, 22, 22);
+}
+.nav-close:hover{
+    color:#f29c9c;
+}
+.nav-items{
+    list-style-type: none;
+}
+.nav-link{
+    display: block;
+    font-size: 1.5rem;
+    padding: 0.25rem 1rem;
+    text-transform: uppercase;
+    letter-spacing: var(--spacing);
+    transition: var(--transition);
+}
+.nav-link:hover{
+    background: var(--clr-primarylight);
+    color: var(--clr-white);
+    padding: 1.5rem;
+    border-left: 0.25rem solid var(--clr-primary);
+}
+@media screen and (min-width:700px){
+    .navbar{
+        max-width: 20rem;
+        width: 30vw;
+    }
+}
+/* 
+==================
 header
 ==================
 */
